src/objects/Product_Split_History__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Splits_Request__c</fullName>
        <label>Revenue Splits Request</label>
        <referenceTo>Revenue_Splits_Request__c</referenceTo>
        <relationshipLabel>Product Split History</relationshipLabel>
        <relationshipName>Product_Split_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subscription_Hyperlink__c</fullName>
        <label>Subscription Hyperlink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Summary_Hyperlink__c</fullName>
        <label>Summary Hyperlink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Subscription</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Add Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Split History</label>
    <nameField>
        <label>Schedule Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Split History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Subscription_Hyperlink__c</columns>
        <columns>Summary_Hyperlink__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>